@@ -5,11 +5,11 @@ import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -33,7 +33,7 @@ public class User implements UserDetails {
     @Column(unique = true)
     private String email;
 
-    @Column(nullable = false , length = 50)
+    @Column(nullable = false )
     private String password;
 
     @Column(nullable = false, length = 50)
@@ -41,6 +41,8 @@ public class User implements UserDetails {
 
     @Enumerated(value = EnumType.STRING)
     private Role role;
+
+    private String authorities;
 
     @Enumerated(value = EnumType.STRING)
     private UserStatus userStatus;
@@ -58,11 +60,44 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        if (authorities == null || authorities.isEmpty()) {
+            return Collections.emptyList(); // Return an empty collection if authorities is null or empty
+        }
+
+        String[] auth = authorities.split(",");
+        return Arrays.stream(auth)
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toList());
     }
+
 
     @Override
     public String getUsername() {
         return email;
+    }
+
+    @Override
+    public String getPassword() {
+        return password;
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
     }
 }
